--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Periodic table</h1>
     <p>this is my first github project</p>
 </body>
 </html>
